--- a/portfolio.html
+++ b/portfolio.html
@@ -260,11 +260,10 @@
             <div class="footer-container footer-form">
                 <form name="subscribe_form" autocomplete="on" method="">
                     <label class="footer-form_label">
-                        Subscribe
+                        Subscribe 
+                        <input type="email" name="email" placeholder="E-mail" class="footer-form-input" required />
                     </label>
-                    <input type="email" name="email" placeholder="E-mail" class="footer-form-input" required />
-    
-                    <button type="submit" class="footer-form-button">Submit
+                    <button type="submit" class="footer-form-button">Subscribe
                         <svg class="footer-form-svgsubscribe">
                             <use href="./images/icons.svg#submit"></use>
                         </svg>
